// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Blog component Should render the Blog component 1`] = `
<DocumentFragment>
  <main
    class="o-main "
  >
    <section
      class="c-section c-section--blog c-section--slides fullsize-background"
      id="blog"
      style="background-image: url(images/temp/articles.jpg);"
    >
      <div
        class="o-shell"
      >
        <header
          class="c-section__header"
        >
          <h2>
            Blog
          </h2>
        </header>
        <div
          class="c-section__body o-grid"
        >
          <div
            class="o-grid__item xs-12 sm-6"
          >
            <a
              class="c-article-link fullsize-background"
              href="/blog/bulk-image-watermark-with-nodejs-and-jimp"
              style="background-image: url(/images/temp/bulk-image-watermark-with-nodejs-and-jimp.jpg);"
            >
              <strong>
                Bulk image watermark with NodeJS and Jimp
              </strong>
            </a>
            <div
              class="c-loading"
            >
              <div
                class="c-loader"
              />
            </div>
          </div>
          <div
            class="o-grid__item xs-12 sm-6"
          >
            <a
              class="c-article-link fullsize-background"
              href="/blog/running-multiple-webpack-based-applications-simultaneously"
              style="background-image: url(/images/temp/running-multiple-webpack-based-applications-simultaneously.png);"
            >
              <strong>
                Running multiple Webpack based applications simultaneously
              </strong>
            </a>
            <div
              class="c-loading"
            >
              <div
                class="c-loader"
              />
            </div>
          </div>
        </div>
        <div
          class="c-section__actions"
        >
          <button
            class="c-btn "
            type="button"
          >
            Get in touch
          </button>
          <ul
            class="c-section__actions-list"
          >
            <li>
              <button
                class="c-btn c-section__actions-close"
                type="button"
              >
                Close
              </button>
            </li>
            <li>
              <button
                class="c-btn "
                type="button"
              >
                <svg
                  class="c-section__actions-icon"
                >
                  <use
                    xlink:href="#svg-email"
                  />
                </svg>
                <span>
                  Contact me
                </span>
                <strong>
                  directly
                </strong>
              </button>
            </li>
            <li>
              <a
                class="c-btn"
                href="https://app.usebraintrust.com/talent/782/"
                rel="noopener noreferrer"
                target="_blank"
              >
                <svg
                  class="c-section__actions-icon"
                >
                  <use
                    xlink:href="#svg-braintrust"
                  />
                </svg>
                <span>
                  Hire me on
                </span>
                <strong>
                  Braintrust
                </strong>
              </a>
            </li>
            <li>
              <a
                class="c-btn"
                href="https://www.toptal.com/resume/atanas-atanasov"
                rel="noopener noreferrer"
                target="_blank"
              >
                <svg
                  class="c-section__actions-icon"
                >
                  <use
                    xlink:href="#svg-toptal"
                  />
                </svg>
                <span>
                  Hire me on
                </span>
                <strong>
                  Toptal
                </strong>
              </a>
            </li>
          </ul>
        </div>
      </div>
    </section>
  </main>
</DocumentFragment>
`;

exports[`Blog component Should render the Blog component 2`] = `
<DocumentFragment>
  <main
    class="o-main "
  >
    <section
      class="c-section c-section--blog c-section--slides fullsize-background"
      id="blog"
      style="background-image: url(images/temp/articles.jpg);"
    >
      <div
        class="o-shell"
      >
        <header
          class="c-section__header"
        >
          <h2>
            Blog
          </h2>
        </header>
        <div
          class="c-section__body o-grid"
        />
        <div
          class="c-section__actions"
        >
          <button
            class="c-btn "
            type="button"
          >
            Get in touch
          </button>
          <ul
            class="c-section__actions-list"
          >
            <li>
              <button
                class="c-btn c-section__actions-close"
                type="button"
              >
                Close
              </button>
            </li>
            <li>
              <button
                class="c-btn "
                type="button"
              >
                <svg
                  class="c-section__actions-icon"
                />
                <span>
                  Contact me
                </span>
                <strong>
                  directly
                </strong>
              </button>
            </li>
            <li>
              <a
                class="c-btn"
                href="https://app.usebraintrust.com/talent/782/"
                rel="noopener noreferrer"
                target="_blank"
              >
                <svg
                  class="c-section__actions-icon"
                />
                <span>
                  Hire me on
                </span>
                <strong>
                  Braintrust
                </strong>
              </a>
            </li>
            <li>
              <a
                class="c-btn"
                href="https://www.toptal.com/resume/atanas-atanasov"
                rel="noopener noreferrer"
                target="_blank"
              >
                <svg
                  class="c-section__actions-icon"
                />
                <span>
                  Hire me on
                </span>
                <strong>
                  Toptal
                </strong>
              </a>
            </li>
          </ul>
        </div>
      </div>
    </section>
  </main>
</DocumentFragment>
`;
